=== HEAD

* Fix Database#rename_table when using PostgreSQL (jeremyevans) (#248)

* Whether to upcase or quote identifiers can now be set separately, via Sequel.upcase_identifiers= or the :upcase_identifiers database option (jeremyevans)

* Support transactions in the ODBC adapter (dlee)

* Support multi_insert_sql and unicode string literals in MSSQL shared adapter (dlee)

* Make PostgreSQL use the default schema if parsing the schema for all tables at once, even if :schema=>nil option is used (jeremyevans)

* Make MySQL adapter not raise an error when giving an SQL::Identifier object to the schema modification methods such as create_table (jeremyevans)

* The keys of the hash returned by Database#schema without a table name are now quoted strings instead of symbols (jeremyevans)

* Make Database#schema to handle implicit schemas on all databases and multiple identifier object types (jeremyevans)

* Remove Sequel.odbc_mssql method (jeremyevans) (#249)

* More optimization of Model#initialize (jeremyevans)

* Treat interval as it's own type, not an integer type (jeremyevans)

* Allow use of implicitly qualified symbol as argument to Symbol#qualify (:a.qualify(:b__c)=>b.c.a), fixes model associations in different schemas (jeremyevans) (#246)

=== 2.7.1 (2008-11-04)

* Fix PostgreSQL Date optimization so that it doesn't reject dates like 11/03/2008 (jeremyevans)

=== 2.7.0 (2008-11-03)

* Transform AssociationReflection from a single class to a class hierarchy (jeremyevans)

* Optimize Date object creation in PostgreSQL adapter (jeremyevans)

* Allow easier creation of custom association types, though support for them may still be suboptimal (jeremyevans)

* Add :eager_grapher option to associations, which the user can use to override the default eager_graph code (jeremyevans)

* Associations are now inherited when a model class is subclassed (jeremyevans)
